--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
     "request": "^2.72.0",
-    "mongodb": "^^2.1.20"
+    "mongodb": "^2.1.20"
   }
 }
